edit to fr preview

--- a/docs/locale/fr/LC_MESSAGES/about/governance.po
+++ b/docs/locale/fr/LC_MESSAGES/about/governance.po
@@ -32,8 +32,8 @@ msgid ""
 "focused on beneficial ownership transparency, in partnership with `Open Data"
 " Services <https://opendataservices.coop/>`_."
 msgstr ""
-"La Norme de données sur la propriété effective (« Beneficial Ownership Data "
-"Standard » ou BODS) est développée par `Open Ownership "
+"La Norme relative aux données sur la propriété effective (« Beneficial "
+"Ownership Data Standard » ou BODS) est développée par `Open Ownership "
 "<https://www.openownership.org/>`_, une organisation à but non lucratif "
 "orientée vers la transparence de la propriété effective, en partenariat avec"
 " `Open Data Services <https://opendataservices.coop/>`_."
@@ -55,8 +55,8 @@ msgid ""
 msgstr ""
 "Au fur et à mesure de la conception de la version 1.0, Open Ownership et "
 "Open Data Services, avec l'aide consultative du groupe de travail sur la "
-"norme de données, actualiseront les procédures de gouvernance et de "
-"développement de la norme BODS."
+"norme relative aux données, actualiseront les procédures de gouvernance et "
+"de développement de la norme BODS."
 
 #: ../../about/governance.rst:10 6a1cb71b6a2543a0a283d7d1c1c2d4f5
 msgid ""
@@ -118,8 +118,8 @@ msgid ""
 "will first be added to the backlog. Once a ticket is actively being "
 "researched or worked on, it will be moved to the Research stage."
 msgstr ""
-"Il s'agit de descriptions des problèmes rencontrés qui se concentrent sur "
-"les lacunes en matière de besoins des utilisateurs et utilisateurs dans la "
+"Il s'agit d'énoncés des problèmes rencontrés qui se concentrent sur les "
+"lacunes en matière de besoins des utilisateurs et utilisateurs dans la "
 "norme BODS devant éventuellement être satisfaits. Les tickets de "
 "développement des fonctionnalités actuellement ouverts sont répertoriés dans"
 " `l'outil de suivi des fonctionnalités de la norme BODS "
@@ -179,7 +179,7 @@ msgstr ""
 
 #: ../../about/governance.rst:39 c799e349b61c41db96eb7ed1d3bec34c
 msgid "Data Standard Working Group"
-msgstr "Groupe de travail sur la norme de données"
+msgstr "Groupe de travail sur la norme relative aux données"
 
 #: ../../about/governance.rst:41 e013aedf3ecb442f82a8d2cd78550802
 msgid ""
@@ -187,9 +187,9 @@ msgid ""
 "data experts to help shape the development of BODS as well as driving "
 "adoption of the standard internationally."
 msgstr ""
-"Le groupe de travail sur la norme de données rassemblent des spécialistes "
-"des données, techniques et au sein du pays afin de concevoir le "
-"développement de la norme BODS et de favoriser l'adoption de la norme à "
+"Le groupe de travail sur la norme relative aux données rassemblent des "
+"spécialistes des données, techniques et au sein du pays afin de concevoir le"
+" développement de la norme BODS et de favoriser l'adoption de la norme à "
 "l'international."
 
 #: ../../about/governance.rst:43 13212a0f468a4680950434d8b55d92a9
