--- a/docs/locale/fr/LC_MESSAGES/about/index.po
+++ b/docs/locale/fr/LC_MESSAGES/about/index.po
@@ -30,9 +30,9 @@ msgid ""
 "This website contains the specification of version 0.4 of the Beneficial "
 "Ownership Data Standard (BODS) and support for its use."
 msgstr ""
-"Ce site web décrit les spécifications de la version 0.4 de la norme de "
-"données sur la propriété effective (« Beneficial Ownership Data Standard » "
-"ou BODS) et les mesures en faveur de son utilisation."
+"Ce site web décrit les spécifications de la version 0.4 de la norme relative"
+" aux données sur la propriété effective (« Beneficial Ownership Data "
+"Standard » ou BODS) et les mesures en faveur de son utilisation."
 
 #: ../../about/index.rst:8 d4726f521bcf404697719e63ac2a5167
 msgid ""
@@ -292,5 +292,5 @@ msgid ""
 "support@openownership.org."
 msgstr ""
 "Pour contacter l'équipe d'Open Ownership chargée de l'assistance liée à la "
-"norme de données, veuillez lui envoyer un e-mail à l'adresse "
+"norme relative aux données, veuillez lui envoyer un e-mail à l'adresse "
 "support@openownership.org."
