--- a/docs/locale/fr/LC_MESSAGES/standard/changelog.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/changelog.po
@@ -62,7 +62,7 @@ msgid ""
 "within a Statement."
 msgstr ""
 "Objet ``recordDetails`` qui contient les champs de personne, d'entité ou de "
-"relation dans une déclaration."
+"relation dans un énoncé."
 
 #: ../../standard/changelog.rst:15 4704ab751f4747beb33593d26669986d
 msgid ""
@@ -70,7 +70,7 @@ msgid ""
 " by parent declaration (filing) or by the declarant"
 msgstr ""
 "``declaration`` et ``declarationSubject`` pour faciliter le regroupement des"
-" déclarations par déclaration principale (dépôt) ou par déclarant"
+" énoncés par déclaration principale (dépôt) ou par déclarant"
 
 #: ../../standard/changelog.rst:16 a6bb12aa2caa46a082254cd09bece40a
 msgid "``recordId`` and ``recordStatus`` to support information updates"
@@ -88,7 +88,7 @@ msgstr "Indications concernant les dates"
 
 #: ../../standard/changelog.rst:20 4b2ed130890046819aed09d753792103
 msgid "Generating statements"
-msgstr "Production de déclarations"
+msgstr "Production d'énoncés"
 
 #: ../../standard/changelog.rst:21 294cebedefbf4a6d86adb45eb6d16841
 msgid "Record identifiers"
@@ -149,12 +149,11 @@ msgstr ""
 #: ../../standard/changelog.rst:33 3f7cfac72f9447c7a0a26e32c51e56a8
 msgid "'Ownership-or-control' statements renamed 'Relationship' statements"
 msgstr ""
-"Les déclarations 'Propriété ou contrôle' ont été renommées déclarations de "
-"'relation'"
+"Les énoncés 'Propriété ou contrôle' ont été renommés énoncés de 'relation'"
 
 #: ../../standard/changelog.rst:34 fc600b0f03cb4133b88f45a56399a718
 msgid "Statement fields:"
-msgstr "Champs de déclaration :"
+msgstr "Champs d'énoncé :"
 
 #: ../../standard/changelog.rst:36 81326c659a3a4a0a95eefc25e85a3000
 msgid "``statementDate`` now required"
@@ -324,7 +323,7 @@ msgid ""
 msgstr ""
 "Aide à la description des valeurs mobilières négociées et du statut d'une "
 "société cotée en bourse (publicly listed company ou PLC, en anglais) : un "
-"nouvel objet ``publicListing`` a été ajouté aux déclarations d'entité."
+"nouvel objet ``publicListing`` a été ajouté aux énoncés d'entité."
 
 #: ../../standard/changelog.rst:83 62e830f736ef4a83beb9247090b84773
 msgid "Support for representing state-owned enterprises (SOEs):"
@@ -345,9 +344,9 @@ msgid ""
 "object with properties ``generalCategory`` (codelist, see below) and "
 "``localTerm`` (string)."
 msgstr ""
-"Ajout d'une nouvelle propriété ``entitySubtype`` aux déclarations d'entité. "
-"Sa valeur est un objet avec les propriétés ``generalCategory`` (liste de "
-"codes, voir ci-dessous) et ``localTerm`` (chaîne)."
+"Ajout d'une nouvelle propriété ``entitySubtype`` aux énoncés d'entité. Sa "
+"valeur est un objet avec les propriétés ``generalCategory`` (liste de codes,"
+" voir ci-dessous) et ``localTerm`` (chaîne)."
 
 #: ../../standard/changelog.rst:87 801966cc06c944fc8ffeee1f6bb153d7
 msgid ""
@@ -362,8 +361,8 @@ msgid ""
 "New ``formedByStatute`` property added to Entity Statements. Its value is an"
 " object with properties ``name`` and ``date``."
 msgstr ""
-"Ajout d'une nouvelle propriété ``formedByStatute`` aux déclarations "
-"d'entité. Sa valeur est un objet avec les propriétés ``name`` et ``date``."
+"Ajout d'une nouvelle propriété ``formedByStatute`` aux énoncés d'entité. Sa "
+"valeur est un objet avec les propriétés ``name`` et ``date``."
 
 #: ../../standard/changelog.rst:89 2f980e73c0fa45349ba3f9f7a24392fb
 msgid ""
@@ -407,17 +406,17 @@ msgid ""
 "wrapped in a ``PoliticalExposure`` object and renamed ``status`` and "
 "``details``."
 msgstr ""
-"Dans la déclaration de personne physique, ``hasPepStatus`` et ``pepDetails``"
-" ont été inclus dans un objet ``PoliticalExposure`` et renommés ``status`` "
-"et ``details``."
+"Dans l'énoncé de personne physique, ``hasPepStatus`` et ``pepDetails`` ont "
+"été inclus dans un objet ``PoliticalExposure`` et renommés ``status`` et "
+"``details``."
 
 #: ../../standard/changelog.rst:102 0575384a168a452eb886df8f7218a28a
 msgid ""
 "``incorporatedInJurisdiction`` property in Entity Statements renamed to "
 "``jurisdiction`` and description updated."
 msgstr ""
-"La propriété ``incorporatedInJurisdiction`` dans les déclarations d'entité a"
-" été renommée ``jurisdiction`` et sa description a été actualisée."
+"La propriété ``incorporatedInJurisdiction`` dans les énoncés d'entité a été "
+"renommée ``jurisdiction`` et sa description a été actualisée."
 
 #: ../../standard/changelog.rst:104 922edee38a8a45a195ad4788a8ec8687
 msgid ""
@@ -518,10 +517,9 @@ msgid ""
 "objects. It takes a boolean value and indicates whether a Statement "
 "represents part of a primary indirect ownership-or-control relationship."
 msgstr ""
-"Une propriété ``isComponent`` obligatoire a été ajoutée aux trois objets de "
-"déclaration. Elle a une valeur booléenne et indique si une déclaration "
-"représente une partie d'une relation principale indirecte de propriété ou de"
-" contrôle."
+"Une propriété ``isComponent`` obligatoire a été ajoutée aux trois objets "
+"d'énoncé. Elle a une valeur booléenne et indique si un énoncé représente une"
+" partie d'une relation principale indirecte de propriété ou de contrôle."
 
 #: ../../standard/changelog.rst:138 9315383a6bae4316981a518f649009c1
 msgid ""
@@ -529,10 +527,10 @@ msgid ""
 "Statements. It takes an array of Statement IDs, indicating which component "
 "statements provide detail about the parent Ownership-or-control Statement."
 msgstr ""
-"Une propriété ``componentStatementIDs`` a été ajoutée aux déclarations de "
-"propriété ou de contrôle. Elle possède un tableau des identifiants de "
-"déclaration indiquant quelles déclarations de composant détaillent la "
-"déclaration de propriété ou de contrôle principale."
+"Une propriété ``componentStatementIDs`` a été ajoutée aux énoncés de "
+"propriété ou de contrôle. Elle possède un tableau des identifiants d'énoncé "
+"indiquant quels énoncés de composant détaillent l'énoncé de propriété ou de "
+"contrôle principal."
 
 #: ../../standard/changelog.rst:140 242e11eb37fc4ecebf8e6d544e5c0b26
 msgid ""
@@ -541,9 +539,9 @@ msgid ""
 "their original publisher. Sub-properties (and their sub-properties) are:"
 msgstr ""
 "Une propriété ``publicationDetails`` obligatoire a été ajoutée aux trois "
-"objets de déclaration. Elle représente les métadonnées des déclarations : "
-"informations sur leur éditeur d'origine. Les sous-propriétés (et leurs sous-"
-"propriétés) sont :"
+"objets d'énoncé. Elle représente les métadonnées des énoncés : informations "
+"sur leur éditeur d'origine. Les sous-propriétés (et leurs sous-propriétés) "
+"sont :"
 
 #: ../../standard/changelog.rst:142 f0a3c41d679543249d20f5c63bb15a13
 msgid "``publicationDate``\\*"
@@ -572,9 +570,8 @@ msgid ""
 "require that Politically Exposed Persons are flagged."
 msgstr ""
 "Une propriété ``hasPepStatus`` (ayant une valeur booléenne) a été ajoutée "
-"aux déclarations de personne physique. Elle ne doit être utilisée que si les"
-" exigences de déclaration imposent le signalement de personnes politiquement"
-" exposées."
+"aux énoncés de personne physique. Elle ne doit être utilisée que si le "
+"signalement de personnes politiquement exposées est obligatoire."
 
 #: ../../standard/changelog.rst:151 f2c89e909acc425fb37efded19f4bb40
 msgid ""
@@ -589,7 +586,7 @@ msgid ""
 "A ``taxResidencies`` property has been added to Person Statements. It takes "
 "an array of Country objects."
 msgstr ""
-"Une propriété ``taxResidencies`` a été ajoutée aux déclarations de personne "
+"Une propriété ``taxResidencies`` a été ajoutée aux énoncés de personne "
 "physique. Elle possède un tableau des objets Pays."
 
 #: ../../standard/changelog.rst:155 8b265b3948644e1b9c93d337033f6b25
@@ -603,16 +600,16 @@ msgid ""
 "``unspecifiedPersonDetails`` has been added to Person Statements (with a "
 "required ``reason`` sub-property)"
 msgstr ""
-"``unspecifiedPersonDetails`` a été ajouté aux déclarations de personne "
-"physique (avec une sous-propriété ``reason`` obligatoire)"
+"``unspecifiedPersonDetails`` a été ajouté aux énoncés de personne physique "
+"(avec une sous-propriété ``reason`` obligatoire)"
 
 #: ../../standard/changelog.rst:158 dfb2240c600b41cca0c372382edf245a
 msgid ""
 "``unspecifiedEntityDetails`` has been added to Entity Statements (with a "
 "required ``reason`` sub-property)"
 msgstr ""
-"``unspecifiedEntityDetails`` a été ajouté aux déclarations d'entité (avec "
-"une sous-propriété ``reason`` obligatoire)"
+"``unspecifiedEntityDetails`` a été ajouté aux énoncés d'entité (avec une "
+"sous-propriété ``reason`` obligatoire)"
 
 #: ../../standard/changelog.rst:160 22fe4fea80f245c1b9406ba53c09c3f2
 msgid ""
@@ -621,23 +618,23 @@ msgid ""
 "property)."
 msgstr ""
 "La sous-propriété ``reason`` s'appuie sur la liste de codes Motif non "
-"précisé (tout comme la propriété ``interestedParty.unspecified`` de la "
-"déclaration de propriété ou de contrôle)."
+"précisé (tout comme la propriété ``interestedParty.unspecified`` de l'énoncé"
+" de propriété ou de contrôle)."
 
 #: ../../standard/changelog.rst:164 0d533cc5aa5940cc89fc68ee84b92af1
 msgid ""
 "The ``pepStatus`` property of Person Statements has been renamed "
 "``pepStatusDetails`` (and still references an array of PEP Status objects)."
 msgstr ""
-"La propriété ``pepStatus`` des déclarations de personne physique a été "
-"renommée ``pepStatusDetails`` (et continue de se référer à un tableau "
-"d'objets Statut de PPE)."
+"La propriété ``pepStatus`` des énoncés de personne physique a été renommée "
+"``pepStatusDetails`` (et continue de se référer à un tableau d'objets Statut"
+" de PPE)."
 
 #: ../../standard/changelog.rst:166 be8f8683b92e44fdbacbf27cab4a2d76
 msgid "The ``personType`` property of Person Statements is now required."
 msgstr ""
-"La propriété ``personType`` des déclarations de personne physique est "
-"désormais obligatoire."
+"La propriété ``personType`` des énoncés de personne physique est désormais "
+"obligatoire."
 
 #: ../../standard/changelog.rst:168 e43e1af936b242e69305d4ec1561dce3
 msgid ""
@@ -718,9 +715,9 @@ msgid ""
 "Statements. It has been replaced with ``unspecifiedPersonDetails`` and "
 "``unspecifiedEntityDetails`` respectively."
 msgstr ""
-"La propriété ``missingInfoReason`` a été supprimée des déclarations de "
-"personne physique et d'entité et a été remplacée par "
-"``unspecifiedPersonDetails`` et ``unspecifiedEntityDetails`` respectivement."
+"La propriété ``missingInfoReason`` a été supprimée des énoncés de personne "
+"physique et d'entité et a été remplacée par ``unspecifiedPersonDetails`` et "
+"``unspecifiedEntityDetails`` respectivement."
 
 #: ../../standard/changelog.rst:198 fce68083a0d24dd2bc4c7e457cb285af
 msgid "[0.1] - 2018-12-12"
@@ -743,7 +740,7 @@ msgid ""
 "person to be recorded as a politically exposed person (with a related "
 "reason, jurisdiction, start date and end date)."
 msgstr ""
-"La propriété ``pepStatus`` a été ajoutée à l'objet Déclaration de personne "
+"La propriété ``pepStatus`` a été ajoutée à l'objet Énoncé de personne "
 "physique. Elle permet d'enregistrer une personne physique en tant que "
 "personne politiquement exposée (avec un motif, une juridiction, une date de "
 "début et une date de fin)."
@@ -754,9 +751,9 @@ msgid ""
 "provide a way of including additional (structured) data or transforming "
 "existing data in a targeted way."
 msgstr ""
-"La propriété ``annotations`` a été ajoutée aux trois types de déclaration. "
-"Les annotations permettent d'intégrer des données (structurées) "
-"supplémentaires ou de transformer les données existantes de manière ciblée."
+"La propriété ``annotations`` a été ajoutée aux trois types d'énoncé. Les "
+"annotations permettent d'intégrer des données (structurées) supplémentaires "
+"ou de transformer les données existantes de manière ciblée."
 
 #: ../../standard/changelog.rst:205 7d7514b22bee4a328e1df2706c550341
 msgid ""
@@ -799,9 +796,9 @@ msgid ""
 "a flattening of the structure of BODS formatted data."
 msgstr ""
 "Les tableaux d'objets ``statementGroup`` (chaque objet avec son identifiant "
-"de groupe de déclaration) ne sont plus utilisés pour combiner des tableaux "
-"de déclarations. Ceci reflète un aplanissement de la structure des données "
-"au format BODS."
+"de groupe d'énoncés) ne sont plus utilisés pour combiner des tableaux "
+"d'énoncés. Ceci reflète un aplanissement de la structure des données au "
+"format BODS."
 
 #: ../../standard/changelog.rst:216 a3f03f2683d746c5b74d586cfc81ad00
 msgid ""
