--- a/docs/locale/fr/LC_MESSAGES/standard/concepts.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/concepts.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Katia Da Silva, 2024
 # Rachel Vint, 2024
+# Katia Da Silva, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Katia Da Silva, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -140,10 +140,10 @@ msgid ""
 "represents a claim made by a source at a particular point in time. The claim"
 " can be about one of three elements of a beneficial ownership network:"
 msgstr ""
-"La déclaration est l'objet de niveau le plus élevé dans un ensemble de "
-"données de la BODS. Chaque déclaration représente une affirmation réalisée "
-"par une source à un moment donné dans le temps. L'affirmation peut porter "
-"sur l'un des trois éléments d'un réseau de bénéficiaires effectifs :"
+"L'énoncé est l'objet de niveau le plus élevé dans un ensemble de données de "
+"la BODS. Chaque énoncé représente une affirmation réalisée par une source à "
+"un moment donné dans le temps. L'affirmation peut porter sur l'un des trois "
+"éléments d'un réseau de bénéficiaires effectifs :"
 
 #: ../../standard/concepts.rst:34 991ffdd79225451cb62e6d301ae6cc8b
 msgid "an entity (including companies, trusts and legal arrangements)"
@@ -170,10 +170,10 @@ msgid ""
 "containing a source block with type-selfDeclaration and assertedBy value of "
 "Acme Industries Ltd. Statement also has statementDate of 2018-07-12"
 msgstr ""
-"Un bloc de déclaration de relation (reliant une personne et une entité) "
-"contient un bloc source avec une valeur type-selfDeclaration et assertedBy "
-"d'Acme Industries Ltd. Une déclaration est également accompagnée d'une "
-"statementDate au 2018-07-12"
+"Un bloc d'énoncé de relation (reliant une personne et une entité) contient "
+"un bloc source avec une valeur type-selfDeclaration et assertedBy d'Acme "
+"Industries Ltd. Un énoncé est également accompagné d'une statementDate au "
+"2018-07-12"
 
 #: ../../standard/concepts.rst:43 007da1c55e974334b6618dafdbe0c948
 msgid ""
@@ -190,16 +190,16 @@ msgid ""
 "statements about beneficial ownership can conflict when they come from "
 "different sources"
 msgstr ""
-"des déclarations sur la propriété effective peuvent être contradictoires "
-"lorsqu'elles proviennent de sources différentes ;"
+"des énoncés sur la propriété effective peuvent être contradictoires "
+"lorsqu'ils proviennent de sources différentes ;"
 
 #: ../../standard/concepts.rst:46 966859e729f143e3a9a2621975952052
 msgid ""
 "statements about beneficial ownership can overlap, referring to identical "
 "parties"
 msgstr ""
-"des déclarations sur la propriété effective peuvent se chevaucher, en "
-"désignant des parties identiques ;"
+"des énoncés sur la propriété effective peuvent se chevaucher, en désignant "
+"des parties identiques ;"
 
 #: ../../standard/concepts.rst:47 cb97dbb252a84b8ca0c23bfde3189a26
 msgid ""
@@ -218,8 +218,8 @@ msgid ""
 "about an element of beneficial ownership as claimed at a particular point in"
 " time."
 msgstr ""
-"Par conséquent, les déclarations doivent être considérées comme immuables ; "
-"elles présentent des détails sur un élément de la propriété effective tel "
+"Par conséquent, les énoncés doivent être considérés comme immuables ; ils "
+"présentent des détails sur un élément de la propriété effective tel "
 "qu'affirmé à un moment donné."
 
 #: ../../standard/concepts.rst:51 a1760c1a70464b389e8b1b7dfe124fe0
@@ -227,8 +227,8 @@ msgid ""
 "To achieve this, each Statement produced by a data management system needs "
 "to include:"
 msgstr ""
-"Pour ce faire, chaque déclaration produite par un système de gestion des "
-"données doit inclure :"
+"Pour ce faire, chaque énoncé produit par un système de gestion des données "
+"doit inclure :"
 
 #: ../../standard/concepts.rst:53 728f602993ff40199f30e01338d665cd
 msgid ""
@@ -249,13 +249,13 @@ msgid ""
 "information update: they publish a new Statement with the updated details of"
 " the record."
 msgstr ""
-"Après publication, les éditeurs n'apportent aucune modification à une "
-"déclaration afin d'indiquer une mise à jour des informations : ils publient "
-"une nouvelle déclaration avec les détails actualisés de l'enregistrement."
+"Après publication, les éditeurs ne modifient pas un énoncé pour indiquer une"
+" mise à jour des informations : ils publient un nouvel énoncé avec les "
+"détails actualisés de l'enregistrement."
 
 #: ../../standard/concepts.rst:60 dd8611046a6b4f9aac88e2b9b0096e51
 msgid "Beneficial ownership records"
-msgstr "Dossiers de la propriété effective"
+msgstr "Enregistrements de la propriété effective"
 
 #: ../../standard/concepts.rst:62 e470c65cef234e6d971130a9f00a75fe
 msgid ""
@@ -264,9 +264,9 @@ msgid ""
 "whose details are disclosed. The ``recordId`` has two purposes:"
 msgstr ""
 "Les systèmes de gestion des données doivent conserver en interne leur propre"
-" dossier avec une chaîne ``recordId`` appropriée pour chaque personne, "
-"entité et relation dont les détails sont divulgués. Le ``recordId`` a deux "
-"objectifs :"
+" enregistrement avec une chaîne ``recordId`` appropriée pour chaque "
+"personne, entité et relation dont les détails sont divulgués. Le "
+"``recordId`` a deux objectifs :"
 
 #: ../../standard/concepts.rst:64 8ea8cf04960642db9b1fa73bdd84c1ba
 msgid "linking entities and persons via relationships"
@@ -291,8 +291,8 @@ msgid ""
 "Stable ``recordId`` values in BODS Statements allow the structure of "
 "beneficial ownership networks to be derived from BODS datasets."
 msgstr ""
-"Grâce aux valeurs ``recordId`` stables contenues dans les déclarations de la"
-" BODS, la structure des réseaux de bénéficiaires effectifs peut reposer sur "
+"Grâce aux valeurs ``recordId`` stables contenues dans les énoncés de la "
+"BODS, la structure des réseaux de bénéficiaires effectifs peut reposer sur "
 "des ensembles de données de la BODS."
 
 #: ../../standard/concepts.rst-1 7ec38efdaa834110bcb6ff3e55a42c77
@@ -311,26 +311,25 @@ msgid ""
 "Lev Yotsky's relationship with White Flag Holdings Corp."
 msgstr ""
 "Un nœud de personne physique est relié par une ligne continue à un nœud "
-"d'entité. Un bloc de déclaration de personne physique est placé à côté du "
-"nœud de personne physique. Un bloc de déclaration de relation se situe à "
-"côté de la ligne continue. Un bloc de déclaration d'entité est placé à côté "
-"du nœud d'entité. Dans la déclaration de personne physique, le recordType "
-"est 'personne', le recordId est 'p24d78ae012f1', et les recordDetails "
-"précisent que le nom de la personne est 'Lev Yotsky'. Dans la déclaration de"
-" relation, le recordType est 'relation' et les recordDetails indiquent que "
-"l'interestedParty est l'enregistrement avec le recordId 'p24d78ae012f1' et "
-"le sujet est l'enregistrement avec le recordId 'e3f199ad8e312'. Dans la "
-"déclaration d'entité, le recordType est 'entité', le recordId est "
-"'e3f199ad8e312' et les recordDetails précisent que le nom de l'entité, "
-"'White Flag Holdings Corp'. Ces éléments représentent la relation de Lev "
-"Yotsky avec Flag Holdings Corp."
+"d'entité. Un bloc d'énoncé de personne physique est placé à côté du nœud de "
+"personne physique. Un bloc d'énoncé de relation se situe à côté de la ligne "
+"continue. Un bloc d'énoncé d'entité est placé à côté du nœud d'entité. Dans "
+"l'énoncé de personne physique, le recordType est 'personne', le recordId est"
+" 'p24d78ae012f1', et les recordDetails précisent que le nom de la personne "
+"est 'Lev Yotsky'. Dans l'énoncé de relation, le recordType est 'relation' et"
+" les recordDetails indiquent que l'interestedParty est l'enregistrement avec"
+" le recordId 'p24d78ae012f1' et le sujet est l'enregistrement avec le "
+"recordId 'e3f199ad8e312'. Dans l'énoncé d'entité, le recordType est "
+"'entité', le recordId est 'e3f199ad8e312' et les recordDetails précisent que"
+" le nom de l'entité, 'White Flag Holdings Corp'. Ces éléments représentent "
+"la relation entre Lev Yotsky et Flag Holdings Corp."
 
 #: ../../standard/concepts.rst:79 d13f9a8c36154ff4b31e6b4a74878c5b
 msgid ""
 "The Relationship statement holds ``recordId`` values for the interested "
 "party and the subject of a relationship."
 msgstr ""
-"La déclaration de relation contient les valeurs ``recordId`` de la partie "
+"L'énoncé de relation contient les valeurs ``recordId`` pour la partie "
 "intéressée et le sujet d'une relation."
 
 #: ../../standard/concepts.rst:82 b5cec2c9c4c94cb4aea47ec6b11fd02d
@@ -347,9 +346,8 @@ msgstr ""
 "À mesure que la propriété effective évolue, les agents transmettent des "
 "informations actualisées sur les personnes, les entités et les relations au "
 "système de gestion des données. Ensuite, le système met à jour ses "
-"enregistrements en conséquence et publie une nouvelle déclaration BODS "
-"contenant le ``recordId`` correspondant, pour chaque enregistrement mis à "
-"jour."
+"enregistrements en conséquence et publie un nouvel énoncé BODS contenant le "
+"``recordId`` correspondant, pour chaque enregistrement mis à jour."
 
 #: ../../standard/concepts.rst:86 9824b85fb24f473397c9423a6562f77b
 msgid ""
@@ -357,8 +355,8 @@ msgid ""
 "to see what information was known when."
 msgstr ""
 "Les personnes peuvent ainsi utiliser les valeurs ``recordId`` pour regrouper"
-" des déclarations faites au fil du temps pour voir quelles informations "
-"étaient connues et quand."
+" des énoncés réalisés au fil du temps pour voir quelles informations étaient"
+" connues et quand."
 
 #: ../../standard/concepts.rst-1 9e8b8ca1ff4542feaa06303b1ea4c3de
 msgid ""
@@ -373,24 +371,23 @@ msgid ""
 "'2021-02-28' and recordStatus 'closed'."
 msgstr ""
 "Un nœud de personne est relié par une ligne continue à un nœud d'entité. Un "
-"bloc de déclaration de relation est placé à côté de la ligne continue. Deux "
-"autres blocs de déclaration de relation figurent au-dessus du premier. Ces "
-"trois déclarations de relation ont un recordId 'r-d67fb1a-aa2f3da' et les "
-"recordDetails précisent que ces déclarations concernent une détention "
-"d'actions. La déclaration de relation la plus ancienne a une statementDate "
-"au '2018-07-12' et un recordStatus 'nouvelle. La suivante a une "
-"statementDate au '2019-11-01' et un recordStatus 'mise à jour'. Enfin, la "
-"dernière déclaration de relation a une statementDate au '2021-02-28' et un "
-"recordStatus 'clôturée'."
+"bloc d'énoncé de relation est placé à côté de la ligne continue. Deux autres"
+" blocs d'énoncé de relation figurent au-dessus du premier. Ces trois énoncés"
+" de relation ont un recordId 'r-d67fb1a-aa2f3da' et les recordDetails "
+"précisent que ces énoncés concernent une détention d'actions. L'énoncé de "
+"relation le plus ancien a une statementDate au '2018-07-12' et un "
+"recordStatus 'nouveau'. Le suivant a une statementDate au '2019-11-01' et un"
+" recordStatus 'mise à jour'. Enfin, le dernier énoncé de relation a une "
+"statementDate au '2021-02-28' et un recordStatus 'clôturé'."
 
 #: ../../standard/concepts.rst:93 13d0767050c745ef8cdb109ca16c5952
 msgid ""
 "Published BODS Statements build a write-only ledger, as new Statements are "
 "issued to amend or confirm details contained in older Statements."
 msgstr ""
-"Les déclarations BODS publiées forment un grand livre de compte en écriture "
-"seul, car les nouvelles déclarations sont émises en vue de modifier ou de "
-"confirmer des informations contenues dans les anciennes déclarations."
+"Les énoncés BODS publiés forment un grand livre de compte en écriture seule,"
+" car les nouveaux énoncés sont émis en vue de modifier ou de confirmer des "
+"informations contenues dans les anciens énoncés."
 
 #: ../../standard/concepts.rst:95 00af9162c4b24cfca998e0bc3afc0085
 msgid "See :ref:`information-updates` for full requirements."
@@ -410,7 +407,7 @@ msgid ""
 msgstr ""
 "Dans un ensemble de données de la BODS, lorsqu'un bénéficiaire effectif "
 "d'une entité est une personne physique, cette information est intégrée dans "
-"la déclaration de relation en reliant ces deux éléments."
+"l'énoncé de relation en reliant ces deux éléments."
 
 #: ../../standard/concepts.rst:102 f24a9bb166b44eacb9bcd94b4d1090e0
 msgid ""
