--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/dates-guidance.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/dates-guidance.po
@@ -52,14 +52,14 @@ msgid ""
 "resolved to make a coherent claim about the state of an entity, person, or "
 "relationship."
 msgstr ""
-"``statementDate`` est la date à laquelle les informations sur l'entité, la "
-"personne ou la relation ont été déclarées vraies. Elle peut être enregistrée"
-" automatiquement quand une personne envoie un formulaire de déclaration en "
-"ligne ou il peut s'agir de la date d'envoi indiquée sur un formulaire "
-"physique. Dans le cas d'un service regroupant des données sur la propriété "
-"effective, il devrait s'agir de la date à laquelle plusieurs sources "
-"d'information ont décidé d'envoyer une déclaration cohérente sur l'état "
-"d'une entité, d'une personne ou d'une relation."
+"``statementDate`` est la date à laquelle il a été affirmé que les "
+"informations sur l'entité, la personne ou la relation sont vraies. Elle peut"
+" être enregistrée automatiquement quand une personne envoie un formulaire de"
+" déclaration en ligne ou il peut s'agir de la date d'envoi indiquée sur un "
+"formulaire physique. Dans le cas d'un service regroupant des données sur la "
+"propriété effective, il devrait s'agir de la date à laquelle plusieurs "
+"sources d'information ont décidé d'envoyer une affirmation cohérente sur "
+"l'état d'une entité, d'une personne ou d'une relation."
 
 #: ../../standard/modelling/dates-guidance.rst:13
 #: 3c30d6932609432cafa0acea9dc9d92a
@@ -70,12 +70,12 @@ msgid ""
 "``statementDate`` value if data is published immediately after submission. "
 "In many cases there will be a delay between submission and publication."
 msgstr ""
-"``publicationDetails.publicationDate`` est la date de publication de cette "
-"déclaration. Il peut s'agir notamment de la date d'ajout des informations "
-"dans un registre public ou de leur mise à disposition par la biais d'une "
-"API. La date peut être identique à la valeur du champ ``statementDate`` si "
-"les données sont publiées immédiatement après l'envoi. Dans bien des cas, il"
-" existe un décalage entre l'envoi et la publication."
+"``publicationDetails.publicationDate`` est la date de publication de cet "
+"énoncé. Il peut s'agir notamment de la date d'ajout des informations dans un"
+" registre public ou de leur mise à disposition par la biais d'une API. La "
+"date peut être identique à la valeur du champ ``statementDate`` si les "
+"données sont publiées immédiatement après l'envoi. Dans bien des cas, il "
+"existe un décalage entre l'envoi et la publication."
 
 #: ../../standard/modelling/dates-guidance.rst:15
 #: a801807a23ac4f67a87ba21b9ca21edc
@@ -194,7 +194,7 @@ msgid ""
 "This statement represents someone divesting from shares. We can use the "
 "statement to construct a timeline of events."
 msgstr ""
-"Cette déclaration représente une personne vendant des actions. Nous pouvons "
+"Cet énoncé représente une personne vendant des actions. Nous pouvons "
 "l'utiliser pour établir la chronologie des événements."
 
 #: ../../standard/modelling/dates-guidance.rst-1
@@ -205,11 +205,11 @@ msgid ""
 " events - the relationship ending, the change being reported and the change "
 "being published."
 msgstr ""
-"Imaginons une déclaration dont la date d'envoi est 2019-09-10, la date de "
+"Imaginons un énoncé dont la date d'envoi est 2019-09-10, la date de "
 "publication est 2021-09-13 et la date de fin de la participation au capital "
-"est 2021-09-03. En regard de la déclaration apparaît une chronologie des "
-"événements indiquant la fin de la relation, la déclaration de la "
-"modification et la publication de la modification."
+"est 2021-09-03. En regard de l'énoncé apparaît une chronologie des "
+"événements indiquant la fin de la relation, la modification signalée et la "
+"publication de la modification."
 
 #: ../../standard/modelling/dates-guidance.rst:49
 #: 8938de462e294b84928a43c6b3b21918
@@ -226,9 +226,9 @@ msgid ""
 msgstr ""
 "Une personne crée une entreprise, l'immatricule et en divulgue les "
 "bénéficiaires effectifs. Une année plus tard, la situation n'a pas évolué. "
-"Une déclaration de confirmation est déposée et une nouvelle déclaration de "
-"relation est générée avec des champs ``statementDate`` et "
-"``publicationDate`` actualisés."
+"Une déclaration de confirmation est déposée et un nouvel énoncé de relation "
+"est généré avec des champs ``statementDate`` et ``publicationDate`` "
+"actualisés."
 
 #: ../../standard/modelling/dates-guidance.rst-1
 #: fdb89245f84541f8ab4f95e617a827ea
@@ -236,9 +236,9 @@ msgid ""
 "2 statements showing the same interest start date and entity founding date. "
 "The statement date and publication date are one year apart."
 msgstr ""
-"Deux déclarations indiquent la même date de début de la participation au "
-"capital et de création de l'entité. La date de déclaration est antérieure "
-"d'un an à la date de publication."
+"Deux énoncés indiquent la même date de début de la participation au capital "
+"et de création de l'entité. La date d'énoncé est antérieure d'un an à la "
+"date de publication."
 
 #: ../../standard/modelling/dates-guidance.rst:59
 #: 9aa369428f984bb9b2b5b1adecddb799
@@ -252,15 +252,15 @@ msgid ""
 "published with an incorrect ``interests[0].startDate``. To correct this, a "
 "new statement is published replacing the incorrect one."
 msgstr ""
-"Suite à une erreur survenue dans le système de publication, une déclaration "
-"de relation est publiée avec une valeur incorrecte pour le champ "
-"``interests[0].startDate``. Afin de corriger cela, une nouvelle déclaration "
-"est publiée en remplacement de la déclaration erronée."
+"Suite à une erreur survenue dans le système de publication, un énoncé de "
+"relation est publié avec une valeur incorrecte pour le champ "
+"``interests[0].startDate``. Afin de corriger cela, un nouvel énoncé est "
+"publié en remplacement de l'énoncé erroné."
 
 #: ../../standard/modelling/dates-guidance.rst:63
 #: 74976cac7ddb411b8789e4343ce789ec
 msgid "The new statement:"
-msgstr "La nouvelle déclaration :"
+msgstr "Le nouvel énoncé :"
 
 #: ../../standard/modelling/dates-guidance.rst:65
 #: fb70c5f391fa4d0b8fbb697e50745633
@@ -295,9 +295,9 @@ msgid ""
 "date. The second statement has an annotation with motivation \"correction\" "
 "point towards the interest start date."
 msgstr ""
-"Deux déclarations affichent les mêmes valeurs dans les champs recordId et "
-"statementDate. La seconde déclaration a une date de publication, une valeur "
-"pour le champ statementId et une date de début de la participation au "
-"capital différentes. En outre, elle contient une annotation indiquant comme "
-"motivation une \"correction\" autour de la date de début de la participation"
-" au capital."
+"Deux énoncés affichent les mêmes valeurs dans les champs recordId et "
+"statementDate. Le second énoncé a une date de publication, une valeur pour "
+"le champ statementId et une date de début de la participation au capital "
+"différentes. En outre, il contient une annotation indiquant comme motivation"
+" une \"correction\" autour de la date de début de la participation au "
+"capital."
