--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/record-ids.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/record-ids.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Cécile Guarin, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -140,11 +140,11 @@ msgstr ""
 "Schéma d'un réseau des bénéficiaires effectifs. Un nœud d'entité pour "
 "l'entreprise Alpha Corp est relié par une ligne continue à un nœud de "
 "personne. Le nœud d'Alpha Corp est également relié par une ligne continue à "
-"un nœud d'entité pour l'entreprise Beta Systems. Un bloc de déclaration "
-"d'entité se situe à côté du nœud d'Alpha Corp. Dans la déclaration d'entité,"
-" le champ recordId est configuré sur '04a221be'. Un bloc de déclaration "
-"d'entité se situe à côté du nœud de Beta Systems. Dans la déclaration "
-"d'entité, le champ recordId est configuré sur '09d3a4fb'."
+"un nœud d'entité pour l'entreprise Beta Systems. Un bloc d'énoncé d'entité "
+"se situe à côté du nœud d'Alpha Corp. Dans l'énoncé d'entité, le champ "
+"recordId est configuré sur '04a221be'. Un bloc d'énoncé d'entité se situe à "
+"côté du nœud de Beta Systems. Dans l'énoncé d'entité, le champ recordId est "
+"configuré sur '09d3a4fb'."
 
 #: ../../standard/modelling/record-ids.rst:31 c897cd3dd68a4709850eb932e959971b
 msgid "Beta Systems declares that it has four direct beneficial owners."
@@ -159,8 +159,8 @@ msgid ""
 msgstr ""
 "Schéma d'un réseau des bénéficiaires effectifs. Un nœud d'entité pour "
 "l'entreprise Beta Systems est relié par une ligne continue à quatre nœuds de"
-" personne. Un bloc de déclaration d'entité se situe à côté du nœud de Beta "
-"Systems. Dans la déclaration d'entité, le champ recordId est configuré sur "
+" personne. Un bloc d'énoncé d'entité se situe à côté du nœud de Beta "
+"Systems. Dans l'énoncé d'entité, le champ recordId est configuré sur "
 "'02c83aa2'."
 
 #: ../../standard/modelling/record-ids.rst:38 1830b2861fc748169e7873e2069309ed
@@ -181,8 +181,8 @@ msgid ""
 "When the BODS data is published, there are statements about the two new Beta"
 " Systems records."
 msgstr ""
-"Quand les données de la norme BODS sont publiées, des déclarations sont "
-"émises pour les deux nouveaux enregistrements de Beta Systems."
+"Quand les données de la norme BODS sont publiées, des énoncés sont émis pour"
+" les deux nouveaux enregistrements de Beta Systems."
 
 #: ../../standard/modelling/record-ids.rst-1 389348edee6a4c4fa9c536b269333593
 msgid ""
@@ -194,8 +194,8 @@ msgid ""
 "recordDetails.identifiers.0.id: 'pc-239118274', declarationSubject: "
 "'02c83aa2'"
 msgstr ""
-"Schéma de deux blocs de déclaration d'entité. Le premier contient les "
-"informations suivantes : recordId '09d3a4fb', recordDetails.name 'BetaSys', "
+"Schéma de deux blocs d'énoncé d'entité. Le premier contient les informations"
+" suivantes : recordId '09d3a4fb', recordDetails.name 'BetaSys', "
 "recordDetails.identifiers.0.scheme 'TZ-CRA', recordDetails.identifiers.0.id:"
 " 'pc-239118274', declarationSubject: '04a221be'. Le second contient les "
 "informations suivantes : recordId '02c83aa2', recordDetails.name 'Beta "
@@ -216,16 +216,16 @@ msgid ""
 "the two statements do refer to the same real world entity, as the ``scheme``"
 " and ``id`` properties in both statements are the same."
 msgstr ""
-"Les deux déclarations se réfèrent à la même entité réelle, car les "
-"propriétés des champs ``scheme`` et ``id`` sont identiques."
+"Les deux énoncés se réfèrent à la même entité réelle, car les propriétés des"
+" champs ``scheme`` et ``id`` sont identiques."
 
 #: ../../standard/modelling/record-ids.rst:51 dcee7eba1ccd4f74b21b421d56e4bda5
 msgid ""
 "the two statements about the same real world entity relate to two different "
 "declaring subjects, as shown by the different ``declarationSubject`` values."
 msgstr ""
-"Les deux déclarations sur la même entité réelle concernent deux sujets "
-"déclarants différents, comme le démontrent les valeurs divergentes du champ "
+"Les deux énoncés sur la même entité réelle concernent deux sujets déclarants"
+" différents, comme le démontrent les valeurs divergentes du champ "
 "``declarationSubject``."
 
 #: ../../standard/modelling/record-ids.rst:52 feaf43da2e5646818986de4a9b673354
@@ -233,6 +233,6 @@ msgid ""
 "the statement for ‘Beta Systems’ has been disclosed by Beta Systems itself, "
 "since the ``recordId`` value is also given as the ``declarationSubject``."
 msgstr ""
-"La déclaration pour ‘Beta Systems’ a été transmise par l'entreprise elle-"
-"même, étant donné que la valeur du champ ``recordId`` est également "
-"communiquée en tant que ``declarationSubject``."
+"L'énoncé pour ‘Beta Systems’ a été transmis par l'entreprise elle-même, "
+"étant donné que la valeur du champ ``recordId`` est également communiquée en"
+" tant que ``declarationSubject``."
