--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-state-owned-enterprises.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-state-owned-enterprises.po
@@ -5,8 +5,8 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
-# Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Cécile Guarin, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,10 +37,10 @@ msgid ""
 "Entity statement with ``entityType.type`` of 'state' or 'stateBody'."
 msgstr ""
 "**Principale exigence :** si le statut d'une entité en tant qu'entreprise "
-"publique doit être représenté, sa déclaration d'entité doit être le sujet "
-"des déclarations de relation la reliant, directement ou non, à une "
-"déclaration d'entité avec le champ ``entityType.type`` configuré sur 'state'"
-" (État) ou 'stateBody' (organisme public)."
+"publique doit être représenté, son énoncé d'entité doit être le sujet des "
+"énoncés de relation la reliant, directement ou non, à un énoncé d'entité "
+"avec le champ ``entityType.type`` configuré sur 'state' (État) ou "
+"'stateBody' (organisme public)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:12
 #: 65254760020349eca2734bc1695dacc6
@@ -62,8 +62,7 @@ msgstr ""
 "repose sur aucune définition en particulier et n'en valide aucune. Au "
 "contraire, elle autorise la représentation des participations au capital "
 "entre un État (ou un organisme public) et une entreprise. Dans ce cas, "
-"l'État (ou l'organisme public) doit être représenté par une déclaration "
-"d'entité."
+"l'État (ou l'organisme public) doit être représenté par un énoncé d'entité."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:16
 #: 541c5e5cdae240a3b997962e6c4b0afb
@@ -129,8 +128,8 @@ msgid ""
 "Ownership or control by a state body is known and a statement about these "
 "interests is possible."
 msgstr ""
-"La propriété ou le contrôle par un organisme public est connu(e) et une "
-"déclaration sur ces participations au capital est possible."
+"La propriété ou le contrôle par un organisme public est connu(e) et un "
+"énoncé sur ces participations au capital est possible."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst-1
 #: dbaf772b9f7740febd4f8fcabbd85f89
@@ -139,11 +138,11 @@ msgid ""
 "a Relationship statement to an Entity statement (with entityType type "
 "'stateBody' and jurisdiction 'gb')."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré 'registeredEntity' (entité immatriculée), est reliée par une "
-"déclaration de relation à une déclaration d'entité, contenant le champ "
-"entityType dont le type est configuré sur 'stateBody' (organisme public) et "
-"la juridiction sur 'gb' (Grande-Bretagne)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"'registeredEntity' (entité immatriculée), est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'stateBody' (organisme public) et la juridiction sur 'gb' "
+"(Grande-Bretagne)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:38
 #: d8c021219bcc40a1a10f644e847fec64
@@ -156,8 +155,8 @@ msgid ""
 "Ownership or control by a regional state government is known and a statement"
 " about these interests is possible."
 msgstr ""
-"La propriété ou le contrôle par un gouvernement régional est connu(e) et une"
-" déclaration sur ces participations au capital est possible."
+"La propriété ou le contrôle par un gouvernement régional est connu(e) et un "
+"énoncé sur ces participations au capital est possible."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst-1
 #: a919d42096744f1aade937e1ef98a75e
@@ -166,11 +165,10 @@ msgid ""
 "a Relationship statement to an Entity statement (with entityType type "
 "'state' and jurisdiction 'zm')."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'registeredEntity' (entité immatriculée) est reliée par une "
-"déclaration de relation à une déclaration d'entité, contenant le champ "
-"entityType dont le type est configuré sur 'state' (État) et la juridiction "
-"sur 'zm' (Zambie)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée) est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'state' (État) et la juridiction sur 'zm' (Zambie)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:48
 #: e8b709c0349142dab3c775dee22b9bee
@@ -197,18 +195,17 @@ msgid ""
 "interestedParty.unspecified.description set to 'Exemption granted on the "
 "basis that the declaring entity is a state-owned enterprise'."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'registeredEntity' (entité immatriculée), est reliée par une "
-"déclaration de relation à une déclaration d'entité, contenant le champ "
-"entityType dont le type est configuré sur 'state' (État) et la juridiction "
-"est 'nl' (Pays-Bas). La déclaration d'entité, contenant le champ entityType "
-"dont le type est configuré sur 'registeredEntity' (entité immatriculée), est"
-" également reliée à une déclaration de relation avec le champ "
-"interestedParty.unspecified.reason configuré sur 'noBeneficialOwners' (aucun"
-" bénéficiaire effectif) et le champ interestedParty.unspecified.description "
-"configuré sur 'Exemption granted on the basis that the declaring entity is a"
-" state-owned enterprise' (dispense accordée, car l'entité déclarante est une"
-" entreprise publique)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée), est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'state' (État) et la juridiction est 'nl' (Pays-Bas). "
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée), est également relié à un "
+"énoncé de relation avec le champ interestedParty.unspecified.reason "
+"configuré sur 'noBeneficialOwners' (aucun bénéficiaire effectif) et le champ"
+" interestedParty.unspecified.description configuré sur 'Exemption granted on"
+" the basis that the declaring entity is a state-owned enterprise' (dispense "
+"accordée, car l'entité déclarante est une entreprise publique)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:58
 #: 746ef90914c4492bae02a4ed1a20e8c4
@@ -233,16 +230,15 @@ msgid ""
 "interests.0.type set to 'controlViaCompanyRulesOrArticles' and "
 "interests.0.details set to 'Veto rights over specified company decisions'."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'registeredEntity' (entité immatriculée), est reliée par une "
-"déclaration de relation à une déclaration d'entité, contenant le champ "
-"entityType dont le type est configuré sur 'stateBody' (organisme public) et "
-"la juridiction sur 'nl' (Pays-Bas). La déclaration de proprité ou de "
-"contrôle contient le champ interests.0.type configuré sur "
-"'controlViaCompanyRulesOrArticles' (contrôle exercé par le biais des statuts"
-" ou des règles de l'entreprise) et le interests.0.details sur 'Veto rights "
-"over specified company decisions' (droits de véto sur des décisions précises"
-" de l'entreprise)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée), est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'stateBody' (organisme public) et la juridiction sur 'nl' "
+"(Pays-Bas). L'énoncé de propriété ou de contrôle contient le champ "
+"interests.0.type configuré sur 'controlViaCompanyRulesOrArticles' (contrôle "
+"exercé par le biais des statuts ou des règles de l'entreprise) et le "
+"interests.0.details sur 'Veto rights over specified company decisions' "
+"(droits de véto sur des décisions précises de l'entreprise)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:68
 #: b40eca442a6b46cb82ad3799ffe9eea0
@@ -265,17 +261,16 @@ msgid ""
 "statement is connected to a Person statement with personType set to "
 "'knownPerson'."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'registeredEntity' (entité immatriculée) est reliée par une "
-"déclaration de relation à une déclaration d'entité, contenant le champ "
-"entityType dont le type est configuré sur 'state' (État) et la juridiction "
-"sur 'zm' (Zambie). La déclaration d'entité, contenant le champ entityType "
-"dont le type est configuré sur 'registeredEntity' (entité immatriculée), est"
-" également reliée à une déclaration de relation, contenant le champ "
-"interests.0.type confguré sur 'seniorManagingOfficial' (gestionnaire "
-"principal). Cette dernière déclaration de relation est reliée à une "
-"déclaration de personne contenant le champ personType configuré sur "
-"'knownPerson' (personne inconnue)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée) est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'state' (État) et la juridiction sur 'zm' (Zambie). "
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée), est également relié à un "
+"énoncé de relation, contenant le champ interests.0.type confguré sur "
+"'seniorManagingOfficial' (gestionnaire principal). Ce dernier énoncé de "
+"relation est relié à un énoncé de personne contenant le champ personType "
+"configuré sur 'knownPerson' (personne inconnue)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:78
 #: ee9495fb8ffd42edaf57de59841e8419
@@ -297,15 +292,14 @@ msgid ""
 "'stateBody' and jurisdiction 'zm'). The Relationship statement has "
 "interests.0.type set to 'controlByLegalFramework'."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'legalEntity' (entité juridique), le champ "
-"formedByLegislation.name  configuré sur 'National Energy Act' (loi nationale"
-" sur l'énergie) et le formedByLegislation.date configuré sur '1980-02-01', "
-"est reliée par une déclaration de relation à une déclaration d'entité, "
-"contenant le champ entityType dont le type est configuré sur 'stateBody' "
-"(organisme public) et la juridiction sur 'zm' (Zambie). La déclaration de "
-"relation contient le champ interests.0.type configuré sur "
-"'controlByLegalFramework' (contrôlé par le cadre juridique)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'legalEntity' (entité juridique), le champ formedByLegislation.name  "
+"configuré sur 'National Energy Act' (loi nationale sur l'énergie) et le "
+"formedByLegislation.date configuré sur '1980-02-01', est relié par un énoncé"
+" de relation à un énoncé d'entité, contenant le champ entityType dont le "
+"type est configuré sur 'stateBody' (organisme public) et la juridiction sur "
+"'zm' (Zambie). L'énoncé de relation contient le champ interests.0.type "
+"configuré sur 'controlByLegalFramework' (contrôlé par le cadre juridique)."
 
 #: ../../standard/modelling/repr-state-owned-enterprises.rst:88
 #: 5c1f1781c29c40aba4d730353db6de84
@@ -330,11 +324,11 @@ msgid ""
 "connected via a Relationship statement to an Entity statement (with "
 "entityType type 'state' and jurisdiction 'gb')."
 msgstr ""
-"La déclaration d'entité, contenant le champ entityType dont le type est "
-"configuré sur 'registeredEntity' (entité immatriculée), est reliée par une "
-"déclaration de relation à une autre déclaration d'entité, contenant le champ"
-" entityType dont le type est configuré sur 'registeredEntity' (entité "
-"immatriculée) et le nom sur 'A G.L.I.E'. Cette dernière déclaration d'entité"
-" est reliée par une déclaration de relation à une déclaration d'entité, "
-"contenant le champ entityType dont le type est configuré sur 'state' (État) "
-"et la juridiction sur 'gb' (Grande-Bretagne)."
+"L'énoncé d'entité, contenant le champ entityType dont le type est configuré "
+"sur 'registeredEntity' (entité immatriculée), est relié par un énoncé de "
+"relation à un autre énoncé d'entité, contenant le champ entityType dont le "
+"type est configuré sur 'registeredEntity' (entité immatriculée) et le nom "
+"sur 'A G.L.I.E'. Ce dernier énoncé d'entité est relié par un énoncé de "
+"relation à un énoncé d'entité, contenant le champ entityType dont le type "
+"est configuré sur 'state' (État) et la juridiction sur 'gb' (Grande-"
+"Bretagne)."
