--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-trusts.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-trusts.po
@@ -5,8 +5,8 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
-# Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Cécile Guarin, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,7 +48,7 @@ msgid ""
 msgstr ""
 "La norme BODS peut être utilisée pour représenter la propriété effective des"
 " trusts et celle des entités par le biais des trusts. Les trusts sont "
-"représentés par une déclaration d'entité."
+"représentés par un énoncé d'entité."
 
 #: ../../standard/modelling/repr-trusts.rst:12
 #: cc160c2fb80d4538848956dcaaba5530
@@ -159,15 +159,15 @@ msgid ""
 "by a relationship statement with interest type 'trustee', and person C by a "
 "relationship statement with interest type 'beneficiary'"
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"étiquetée Trust A, contenant le champ entityType dont le type est configuré "
-"sur 'arrangement' (construction juridique) et le sous-type sur 'trust.' Le "
-"trust A est relié à une personne A par une déclaration de relation dont le "
-"type de participation au capital est configuré sur 'settlor', (constituant) "
-"une personne B par une déclaration de relation dont le type de participation"
-" au capital est configurée sur 'trustee' (mandataire) et une personne C par "
-"une déclaration de relation dont le type de participation au capital est "
-"configuré sur 'beneficiary' (bénéficiaire)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité étiqueté Trust A, "
+"contenant le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'trust.' Le trust A est relié à"
+" une personne A par un énoncé de relation dont le type de participation au "
+"capital est configuré sur 'settlor', (constituant) une personne B par un "
+"énoncé de relation dont le type de participation au capital est configuré "
+"sur 'trustee' (mandataire) et une personne C par un énoncé de relation dont "
+"le type de participation au capital est configuré sur 'beneficiary' "
+"(bénéficiaire)."
 
 #: ../../standard/modelling/repr-trusts.rst:42
 #: aa7add7c0f69445a87436d602e4c34ab
@@ -192,17 +192,16 @@ msgid ""
 "relationship statement with interest type 'protector', and person D by a "
 "relationship statement with interest type 'beneficiary.'"
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"étiquetée Trust A, contenant le champ entityType dont le type est configuré "
-"sur 'legalEntity' (entité juridique) et le sous-type sur 'trust.' Le trust A"
-" est relié à une personne A par une déclaration de relation dont le type de "
-"participation au capital est configuré sur 'settlor' (constituant), une "
-"personne B par une déclaration de relation dont le type de participation au "
-"capital est configuré sur 'trustee' (mandataire), une personne C par une "
-"déclaration de relation dont le type de participation au capital est "
-"configuré sur 'protector' (tiers protecteur) et une personne D par une "
-"déclaration de relation dont le type de participation au capital est "
-"configuré sur 'beneficiary' (bénéficiaire)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité étiqueté Trust A, "
+"contenant le champ entityType dont le type est configuré sur 'legalEntity' "
+"(entité juridique) et le sous-type sur 'trust.' Le trust A est relié à une "
+"personne A par un énoncé de relation dont le type de participation au "
+"capital est configuré sur 'settlor' (constituant), une personne B par un "
+"énoncé de relation dont le type de participation au capital est configuré "
+"sur 'trustee' (mandataire), une personne C par un énoncé de relation dont le"
+" type de participation au capital est configuré sur 'protector' (tiers "
+"protecteur) et une personne D par un énoncé de relation dont le type de "
+"participation au capital est configuré sur 'beneficiary' (bénéficiaire)."
 
 #: ../../standard/modelling/repr-trusts.rst:52
 #: 6753a8165170426b85202f34d451b7da
@@ -227,17 +226,17 @@ msgid ""
 "person statement with person type 'anonymous person' and unspecified person "
 "details 'subject exempt from disclosure'"
 msgstr ""
-"Schéma représentant les déclarations reliées. Le trust A est relié à une "
-"personne A par une déclaration de relation, dont les types de participation "
-"au capital sont configurés sur 'settlor' (constituant) et 'trustee' "
-"(mandataire), à une personne B par une déclaration de relation dont le type "
-"de participation au capital est configuré sur 'trustee' (mandataire) et à "
-"une personne C par une déclaration de relation dont les types de "
-"participation au capital sont configurés sur 'beneficiary' (bénéficiaire). "
-"Une personne D a une déclaration de personne dont le type de personne est "
-"configuré sur 'anonymous person' (personne anonyme) et les informations de "
-"personne non indiquées sont configurées sur 'subject exempt from disclosure'"
-" (sujet exempté de divulgation)."
+"Schéma représentant les énoncés reliés. Le trust A est relié à une "
+"personne A par un énoncé de relation, dont les types de participation au "
+"capital sont configurés sur 'settlor' (constituant) et 'trustee' "
+"(mandataire), à une personne B par un énoncé de relation dont le type de "
+"participation au capital est configuré sur 'trustee' (mandataire) et à une "
+"personne C par un énoncé de relation dont les types de participation au "
+"capital sont configurés sur 'beneficiary' (bénéficiaire). Une personne D a "
+"un énoncé de personne dont le type de personne est configuré sur 'anonymous "
+"person' (personne anonyme) et les informations de personne non indiquées "
+"sont configurées sur 'subject exempt from disclosure' (sujet exempté de "
+"divulgation)."
 
 #: ../../standard/modelling/repr-trusts.rst:61
 #: db3c7cd0904d4991a2d9acb0e9ca3984
@@ -263,18 +262,18 @@ msgid ""
 "'fiduciaire', and person C by a relationship statement with interest type "
 "'beneficiary' and interest details 'beneficiaire'"
 msgstr ""
-"Schéma représentant les déclarations reliées. Une déclaration d'entité "
-"étiquetée Trust A, contenant le champ entityType dont le type est configuré "
-"sur 'arrangement' (construction juridique), le sous-type sur 'trust' et les "
+"Schéma représentant les énoncés reliés. Un énoncé d'entité étiquetée "
+"Trust A, contenant le champ entityType dont le type est configuré sur "
+"'arrangement' (construction juridique), le sous-type sur 'trust' et les "
 "informations sur 'fiducie-sûreté.' Le trust A est relié à une personne A par"
-" une déclaration de relation dont le type de participation au capital est "
+" un énoncé de relation dont le type de participation au capital est "
 "configuré sur 'settlor' (constituant) et les informations sur cette "
-"participation sur 'constituant', à une personne B par une déclaration de "
-"relation dont le type de participation au capital est configuré sur "
-"'trustee' (mandataire) et les informations sur cette participation sur "
-"'fiduciaire' et à une personne C par une déclaration de relation dont le "
-"type de participation au capital est 'beneficiary' (bénéficiaire) et les "
-"informations sur cette participation sur 'bénéficiaire'."
+"participation sur 'constituant', à une personne B par un énoncé de relation "
+"dont le type de participation au capital est configuré sur 'trustee' "
+"(mandataire) et les informations sur cette participation sur 'fiduciaire' et"
+" à une personne C par un énoncé de relation dont le type de participation au"
+" capital est 'beneficiary' (bénéficiaire) et les informations sur cette "
+"participation sur 'bénéficiaire'."
 
 #: ../../standard/modelling/repr-trusts.rst:70
 #: 7b8ab1e384f844f3a48fec83b13cf979
@@ -291,9 +290,8 @@ msgid ""
 msgstr ""
 "Une participation importante au capital d'une entreprise est détenue dans un"
 " trust. Les parties de ce trust sont les bénéficiaires effectifs de "
-"l'entreprise. Les lignes en pointillés représentent les déclarations de "
-"relation requises pour représenter la propriété effective indirecte des "
-"parties."
+"l'entreprise. Les lignes en pointillés représentent les énoncés de relation "
+"requis pour représenter la propriété effective indirecte des parties."
 
 #: ../../standard/modelling/repr-trusts.rst:73
 #: ../../standard/modelling/repr-trusts.rst:84
@@ -314,9 +312,9 @@ msgid ""
 "and Person C to represent that they are the ultimate beneficial owners of "
 "Company A."
 msgstr ""
-"Schéma représentant les déclarations reliées. Une entreprise A appartient à "
-"un trust A auquel il est relié par une déclaration de relation dont le type "
-"de participation au capital est configuré sur 'shareholding' (détenction "
+"Schéma représentant les énoncés reliés. Une entreprise A appartient à un "
+"trust A auquel il est relié par un énoncé de relation dont le type de "
+"participation au capital est configuré sur 'shareholding' (détenction "
 "d'actions). Le trust A a un constituant (la personne A), un mandataire (la "
 "personne B) et un bénéficiaire (la personne C). Les lignes en pointillés "
 "entre l'entreprise A et la personne A, la personne B et la personne C "
@@ -348,17 +346,17 @@ msgid ""
 " type for this relationship statement is 'other influence or control.' There"
 " are also Person A and Person B the settlor and beneficiary of the trust."
 msgstr ""
-"Schéma représentant les déclarations reliées. Un trust A est relié à une "
-"entreprise A par une déclaration de relation dont le type de participation "
-"au capital est configuré sur mandataire. L'entreprise A est reliée à une "
-"personne C par une déclaration de relation dont le type de participation au "
-"capital est configuré sur détention d'actions. Il existe également une "
-"déclaration de relation entre la personne C et le trust qui les représentent"
-" comme l'un des bénéficiaires effectifs en dernière analyse du trust A. Le "
-"type de participation au capital pour cette déclaration de relation est "
-"configuré sur 'other influence or control' (autre influence ou contrôle). En"
-" outre, la personne A et la personne B sont respectivement le constituant et"
-" le bénéficiaire du trust."
+"Schéma représentant les énoncés reliés. Un trust A est relié à une "
+"entreprise A par un énoncé de relation dont le type de participation au "
+"capital est configuré sur mandataire. L'entreprise A est reliée à une "
+"personne C par un énoncé de relation dont le type de participation au "
+"capital est configuré sur détention d'actions. Il existe également un énoncé"
+" de relation entre la personne C et le trust qui les représentent comme l'un"
+" des bénéficiaires effectifs en dernière analyse du trust A. Le type de "
+"participation au capital pour cet énoncé de relation est configuré sur "
+"'other influence or control' (autre influence ou contrôle). En outre, la "
+"personne A et la personne B sont respectivement le constituant et le "
+"bénéficiaire du trust."
 
 #: ../../standard/modelling/repr-trusts.rst:93
 #: 11ce49d6ef4e46b893765b6701e6497e
