--- a/docs/locale/fr/LC_MESSAGES/codelist.po
+++ b/docs/locale/fr/LC_MESSAGES/codelist.po
@@ -148,7 +148,7 @@ msgid ""
 "statement."
 msgstr ""
 "Le champ de description fournit des commentaires contextuels pour un champ, "
-"un objet ou une déclaration."
+"un objet ou un énoncé."
 
 #. title
 #: schema/codelists/annotationMotivation.csv:2
@@ -162,8 +162,8 @@ msgid ""
 "method in the description field or from the original value given in the "
 "description field."
 msgstr ""
-"La valeur de ce champ, de cet objet ou de cette déclaration a été corrigée, "
-"à l'aide de la méthode du champ de description ou à partir de la valeur "
+"La valeur de ce champ, de cet objet ou de cet énoncé a été corrigée, à "
+"l'aide de la méthode du champ de description ou à partir de la valeur "
 "d'origine indiquée dans le champ de description."
 
 #. title
@@ -178,10 +178,9 @@ msgid ""
 " for the purpose of identifying natural persons or legal entities, using the"
 " method in the description field."
 msgstr ""
-"La valeur de ce champ, de cet objet ou de cette déclaration a été augmentée "
-"ou traitée à des fins d'identification des personnes physiques ou des "
-"entités juridiques, à l'aide de la méthode indiquée dans le champ de "
-"description."
+"La valeur de ce champ, de cet objet ou de cet énoncé a été augmentée ou "
+"traitée à des fins d'identification des personnes physiques ou des entités "
+"juridiques, à l'aide de la méthode indiquée dans le champ de description."
 
 #. title
 #: schema/codelists/annotationMotivation.csv:4
@@ -195,8 +194,8 @@ msgid ""
 " statement. A URL to linked material MUST be provided in the `url` field."
 msgstr ""
 "La description explique en quoi le contenu en lien est pertinent pour le "
-"champ, l'objet ou la déclaration. Une URL vers le contenu en lien DOIT "
-"figurer dans le champ `url`."
+"champ, l'objet ou l'énoncé. Une URL vers le contenu en lien DOIT figurer "
+"dans le champ `url`."
 
 #. title
 #: schema/codelists/annotationMotivation.csv:5
@@ -210,10 +209,10 @@ msgid ""
 "original form using the method in the description field. The transformed "
 "representation may be provided in the `transformedContent` field."
 msgstr ""
-"Les valeurs de ce champ, de cet objet ou de cette déclaration ont été "
-"modifiées par rapport à leur forme d'origine, à l'aide de la méthode "
-"indiquée dans le champ de description. La représentation transformée peut "
-"apparaître dans le champ `transformedContent`."
+"Les valeurs de ce champ, de cet objet ou de cet énoncé ont été modifiées par"
+" rapport à leur forme d'origine, à l'aide de la méthode indiquée dans le "
+"champ de description. La représentation transformée peut apparaître dans le "
+"champ `transformedContent`."
 
 #. title
 #: schema/codelists/directOrIndirect.csv:1
@@ -696,8 +695,7 @@ msgid ""
 "Relationship Statement, but the nature of the interest is unknown."
 msgstr ""
 "La partie intéressée est connue pour avoir une participation dans le sujet "
-"de cette déclaration de relation, mais la nature de la participation est "
-"inconnue."
+"de cet énoncé de relation, mais la nature de la participation est inconnue."
 
 #. title
 #: schema/codelists/interestType.csv:19
@@ -885,8 +883,8 @@ msgid ""
 "This is the first Statement published pertaining to the record referenced by"
 " `recordId`."
 msgstr ""
-"Il s'agit de la première déclaration publiée concernant l'enregistrement "
-"référencé par le `recordId`."
+"Il s'agit du premier énoncé publié concernant l'enregistrement référencé par"
+" le `recordId`."
 
 #. title
 #: schema/codelists/recordStatus.csv:2
@@ -899,8 +897,8 @@ msgid ""
 "This Statement updates information published in a prior Statement pertaining"
 " to the record referenced by `recordId`."
 msgstr ""
-"Cette déclaration met à jour les informations publiées dans une précédente "
-"déclaration concernant l'enregistrement référencé par le `recordId`."
+"Cet énoncé met à jour les informations publiées dans un précédent énoncé "
+"concernant l'enregistrement référencé par le `recordId`."
 
 #. title
 #: schema/codelists/recordStatus.csv:3
@@ -913,8 +911,8 @@ msgid ""
 "This is the final Statement published pertaining to the record referenced by"
 " `recordId`."
 msgstr ""
-"Il s'agit de la déclaration finale publiée concernant l'enregistrement "
-"référencé par le `recordId`."
+"Il s'agit de l'énoncé final publié concernant l'enregistrement référencé par"
+" le `recordId`."
 
 #: schema/codelists/recordType.csv
 msgid "technical note"
@@ -931,8 +929,8 @@ msgid ""
 "The Record Details in this Statement contain information about a natural "
 "person at a particular point in time."
 msgstr ""
-"Les détails de l'enregistrement dans cette déclaration contiennent des "
-"informations sur une personne physique à un moment donné."
+"Les détails de l'enregistrement dans cet énoncé contiennent des informations"
+" sur une personne physique à un moment donné."
 
 #. technical note
 #: schema/codelists/recordType.csv:1
@@ -953,8 +951,8 @@ msgid ""
 "The Record Details in this Statement contain information that identifies and"
 " describes an entity at a particular point in time."
 msgstr ""
-"Les détails de l'enregistrement dans cette déclaration contiennent des "
-"informations qui identifient et décrivent une entité à un moment donné."
+"Les détails de l'enregistrement dans cet énoncé contiennent des informations"
+" qui identifient et décrivent une entité à un moment donné."
 
 #. technical note
 #: schema/codelists/recordType.csv:2
@@ -975,9 +973,9 @@ msgid ""
 "The Record Details in this Statement describe the interests held by an "
 "interested party in a subject (an entity) at a particular point in time."
 msgstr ""
-"Les détails de l'enregistrement dans cette déclaration décrivent les "
-"participations détenues par une partie intéressée dans un sujet (une entité)"
-" à un moment donné."
+"Les détails de l'enregistrement dans cet énoncé décrivent les participations"
+" détenues par une partie intéressée dans un sujet (une entité) à un moment "
+"donné."
 
 #. technical note
 #: schema/codelists/recordType.csv:3
@@ -1097,7 +1095,7 @@ msgid ""
 "person, entity or interests described by this statement."
 msgstr ""
 "Les informations ont été fournies par un tiers, non directement lié à la "
-"personne, à l'entité ou à la participation décrites par cette déclaration."
+"personne, à l'entité ou à la participation décrites par cet énoncé."
 
 #. title
 #: schema/codelists/sourceType.csv:4
@@ -1138,7 +1136,7 @@ msgid ""
 "the rules under which this statement is made."
 msgstr ""
 "Aucun bénéficiaire effectif ne doit divulguer sa propriété conformément aux "
-"règles de cette déclaration."
+"règles de cet énoncé."
 
 #. title
 #: schema/codelists/unspecifiedReason.csv:2
@@ -1152,8 +1150,8 @@ msgid ""
 "been unwilling or unable to confirm the existence identify a beneficial "
 "owner."
 msgstr ""
-"Le sujet de cette déclaration de relation, en tant que partie divulgatrice, "
-"n'a pas voulu ou pas pu confirmer l'existence ou identifier un bénéficiaire "
+"Le sujet de cet énoncé de relation, en tant que partie divulgatrice, n'a pas"
+" voulu ou pas pu confirmer l'existence ou identifier un bénéficiaire "
 "effectif."
 
 #. title
@@ -1167,9 +1165,9 @@ msgid ""
 "The interested party in this Relationship Statement has not provided enough "
 "information to identify or confirm the identity of the beneficial owner."
 msgstr ""
-"La partie intéressée dans cette déclaration de relation n'a pas fourni "
-"suffisamment d'informations pour identifier ou confirmer l'identité du "
-"bénéficiaire effectif."
+"La partie intéressée dans cet énoncé de relation n'a pas fourni suffisamment"
+" d'informations pour identifier ou confirmer l'identité du bénéficiaire "
+"effectif."
 
 #. title
 #: schema/codelists/unspecifiedReason.csv:4
@@ -1182,7 +1180,7 @@ msgid ""
 "The subject of this Relationship Statement is not required to disclose its "
 "beneficial owner."
 msgstr ""
-"Le sujet de cette déclaration de relation n'est pas tenu de divulguer son "
+"Le sujet de cet énoncé de relation n'est pas tenu de divulguer son "
 "bénéficiaire effectif."
 
 #. title
@@ -1196,7 +1194,7 @@ msgid ""
 "The interested party in this Relationship Statement is exempt from having "
 "their identity disclosed."
 msgstr ""
-"La partie intéressée dans cette déclaration de relation n'est pas tenue de "
+"La partie intéressée dans cet énoncé de relation n'est pas tenue de "
 "divulguer son identité."
 
 #. title
