--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-nominations.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-nominations.po
@@ -5,8 +5,8 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
-# Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Cécile Guarin, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,7 +53,7 @@ msgid ""
 msgstr ""
 "La norme BODS peut être utilisée pour représenter la propriété effective des"
 " entités par le biais de constructions juridiques de mandataires. Ces "
-"dernières sont représentées par une déclaration d'entité."
+"dernières sont représentées par un énoncé d'entité."
 
 #: ../../standard/modelling/repr-nominations.rst:12
 #: c8e51c408f3b4a71bb8c417f9945dcb3
@@ -131,8 +131,8 @@ msgid ""
 msgstr ""
 "Deux personnes concluent une construction juridique de direction de "
 "mandataire pour une entreprise donnée. Les lignes en pointillés représentent"
-" les déclarations de relation requises pour représenter la propriété "
-"effective indirecte des parties."
+" les énoncés de relation requis pour représenter la propriété effective "
+"indirecte des parties."
 
 #: ../../standard/modelling/repr-nominations.rst:32
 #: 3bfe2de7e48c44b38a4b7e2c4ff4eb2e
@@ -158,23 +158,21 @@ msgid ""
 "the registered entity. The interest type for this relationship statement is "
 "'other influence or control'."
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"contient le champ entityType dont le type est configuré sur 'arrangement' "
-"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
-" de la construction juridique est reliée à une déclaration de personne par "
-"une déclaration de relation avec le type de participation au capital "
-"configuré sur 'nominator' (mandant) et à une deuxième déclaration de "
-"personne par une déclaration de relation avec le type de participation au "
-"capital configuré sur 'nominee' (mandataire. Une seconde déclaration "
-"d'entité avec le type \"Registered entity\" est reliée à l'entité de "
-"construction juridique par une déclaration de relation avec le type de "
-"participation au capital configuré sur 'board member' (membre du conseil "
-"d'administration). Il existe également une déclaration de relation entre la "
-"première déclaration de personne et l'entité immatriculée afin de "
-"représenter un des bénéficiaires effectifs en dernière analyse de l'entité "
-"immatriculée. Le type de participation au capital pour cette déclaration de "
-"relation est configuré sur 'other influence or control' (autre influence ou "
-"contrôle)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité contient le champ "
+"entityType dont le type est configuré sur 'arrangement' (construction "
+"juridique) et le sous-type sur 'nomination' (mandat). L'entité de la "
+"construction juridique est reliée à un énoncé de personne par un énoncé de "
+"relation avec le type de participation au capital configuré sur 'nominator' "
+"(mandant) et à un deuxième énoncé de personne par un énoncé de relation avec"
+" le type de participation au capital configuré sur 'nominee' (mandataire. Un"
+" second énoncé d'entité avec le type \"Registered entity\" est relié à "
+"l'entité de construction juridique par un énoncé de relation avec le type de"
+" participation au capital configuré sur 'board member' (membre du conseil "
+"d'administration). Il existe également un énoncé de relation entre le "
+"premier énoncé de personne et l'entité immatriculée afin de représenter un "
+"des bénéficiaires effectifs en dernière analyse de l'entité immatriculée. Le"
+" type de participation au capital pour cet énoncé de relation est configuré "
+"sur 'other influence or control' (autre influence ou contrôle)."
 
 #: ../../standard/modelling/repr-nominations.rst:40
 #: 84a81e261d954293be243501f33c4c3c
@@ -202,17 +200,17 @@ msgid ""
 "\"Registered entity\" is connected to the arrangement entity by a "
 "relationship statement with interest type 'shareholding'."
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"contient le champ entityType dont le type est configuré sur 'arrangement' "
-"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
-" de la construction juridique est reliée à une déclaration de personne par "
-"une déclaration de relation avec le type de participation au capital "
-"configuré sur 'nominator' (mandant) et à une deuxième déclaration de "
-"personne par une déclaration de relation avec le type de participation au "
-"capital configuré sur 'nominee' (mandataire). Une seconde déclaration "
-"d'entité avec le type \"Registered entity\" est reliée à l'entité de "
-"construction juridique par une déclaration de relation avec le type de "
-"participation au capital configuré sur 'shareholding' (détention d'actions)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité contient le champ "
+"entityType dont le type est configuré sur 'arrangement' (construction "
+"juridique) et le sous-type sur 'nomination' (mandat). L'entité de la "
+"construction juridique est relié à un énoncé de personne par un énoncé de "
+"relation avec le type de participation au capital configuré sur 'nominator' "
+"(mandant) et à un deuxième énoncé de personne par un énoncé de relation avec"
+" le type de participation au capital configuré sur 'nominee' (mandataire). "
+"Un second énoncé d'entité avec le type \"Registered entity\" est relié à "
+"l'entité de construction juridique par un énoncé de relation avec le type de"
+" participation au capital configuré sur 'shareholding' (détention "
+"d'actions)."
 
 #: ../../standard/modelling/repr-nominations.rst:50
 #: 0965456d67794250aa1b7eabdd2fa5f1
@@ -240,18 +238,18 @@ msgid ""
 "arrangement entity by a relationship statement with interest type "
 "'shareholding'."
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"contient le champ entityType dont le type est configuré sur 'arrangement' "
-"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
-" de la construction juridique est reliée à une déclaration de personne par "
-"une déclaration de relation avec le type de participation au capital "
-"configuré sur 'nominator' (mandant) et à une deuxième déclaration d'entité "
-"avec le type d'entité configuré sur 'registered entity' (entité "
-"immatriculée) par une déclaration de relation avec le type de participation "
-"au capital configurée sur 'nominee' (mandataire). Une troisième déclaration "
-"d'entité avec le type \"Registered entity\" est reliée à l'entité de la "
-"construction juridique par une déclaration de relation avec le type de "
-"participation au capital configuré sur 'shareholding' (détention d'actions)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité contient le champ "
+"entityType dont le type est configuré sur 'arrangement' (construction "
+"juridique) et le sous-type sur 'nomination' (mandat). L'entité de la "
+"construction juridique est reliée à un énoncé de personne par un énoncé de "
+"relation avec le type de participation au capital configuré sur 'nominator' "
+"(mandant) et à un deuxième énoncé d'entité avec le type d'entité configuré "
+"sur 'registered entity' (entité immatriculée) par un énoncé de relation avec"
+" le type de participation au capital configurée sur 'nominee' (mandataire). "
+"Un troisième énoncé d'entité avec le type \"Registered entity\" est relié à "
+"l'entité de la construction juridique par un énoncé de relation avec le type"
+" de participation au capital configuré sur 'shareholding' (détention "
+"d'actions)."
 
 #: ../../standard/modelling/repr-nominations.rst:59
 #: 322ceee5240e402b813811da5b148156
@@ -282,22 +280,21 @@ msgid ""
 "arrangement entity by a relationship statement with interest type 'board "
 "member'."
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"contient le champ entityType dont le type est configuré sur 'arrangement' "
-"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
-" de la construction juridique est reliée à une déclaration de personne avec "
-"le type de personne configuré sur 'unknown person' (personne inconnue) et le"
-" motif sur 'subject unable to confirm or identify beneficial owner' (sujet "
-"incapable de confirmer ou d'identifier le bénéficiaire effectif) pour le "
-"champ unspecifiedPersonDetails par une déclaration de relation avec le type "
-"de participation au capital configuré sur 'nominator' (mandant). L'entité de"
-" la construction juridique est également reliée à une deuxième déclaration "
-"de personne par une déclaration de relation avec le type de participation au"
-" capital configuré sur 'nominee' (mandataire). Une deuxième déclaration "
-"d'entité avec le type \"Registered entity\" est reliée à l'entité de la "
-"construction juridique par une déclaration de relation avec le type de "
-"participation au capital configuré sur 'board member' (membre de conseil "
-"d'administration)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité contient le champ "
+"entityType dont le type est configuré sur 'arrangement' (construction "
+"juridique) et le sous-type sur 'nomination' (mandat). L'entité de la "
+"construction juridique est reliée à un énoncé de personne avec le type de "
+"personne configuré sur 'unknown person' (personne inconnue) et le motif sur "
+"'subject unable to confirm or identify beneficial owner' (sujet incapable de"
+" confirmer ou d'identifier le bénéficiaire effectif) pour le champ "
+"unspecifiedPersonDetails par un énoncé de relation avec le type de "
+"participation au capital configuré sur 'nominator' (mandant). L'entité de la"
+" construction juridique est également reliée à un deuxième énoncé de "
+"personne par un énoncé de relation avec le type de participation au capital "
+"configuré sur 'nominee' (mandataire). Un deuxième énoncé d'entité avec le "
+"type \"Registered entity\" est relié à l'entité de la construction juridique"
+" par un énoncé de relation avec le type de participation au capital "
+"configuré sur 'board member' (membre de conseil d'administration)."
 
 #: ../../standard/modelling/repr-nominations.rst:68
 #: a7db5c26811045cc9e32f628f197f60c
@@ -324,12 +321,12 @@ msgid ""
 "connected to the arrangement entity by a relationship statement with "
 "interest type 'board member'."
 msgstr ""
-"Schéma représentant les déclarations reliées. La déclaration d'entité "
-"contient le champ entityType dont le type est configuré sur 'arrangement' "
-"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
-" de la construction juridique est reliée à une déclaration de personne par "
-"une déclaration de relation avec le type de participation au capital "
-"configuré sur 'nominee' (mandataire). Une deuxième déclaration d'entité avec"
-" le type \"Registered entity\" est reliée à l'entité de la construction "
-"juridique par une déclaration de relation avec le type de participation au "
-"capital configuré sur 'board member' (membre de conseil d'administration)."
+"Schéma représentant les énoncés reliés. L'énoncé d'entité contient le champ "
+"entityType dont le type est configuré sur 'arrangement' (construction "
+"juridique) et le sous-type sur 'nomination' (mandat). L'entité de la "
+"construction juridique est reliée à un énoncé de personne par un énoncé de "
+"relation avec le type de participation au capital configuré sur 'nominee' "
+"(mandataire). Un deuxième énoncé d'entité avec le type \"Registered entity\""
+" est relié à l'entité de la construction juridique par un énoncé de relation"
+" avec le type de participation au capital configuré sur 'board member' "
+"(membre de conseil d'administration)."
