--- a/docs/locale/fr/LC_MESSAGES/standard/system/conformance.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/system/conformance.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Cécile Guarin, 2024
 # Rachel Vint, 2024
+# Cécile Guarin, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -120,7 +120,7 @@ msgstr ""
 "schéma JSON et aux exigences supplémentaires pouvant être validées par "
 "programmation, mais qui ne sont pas comprises dans le schéma. Par exemple, "
 "il vérifie que les identifiants de l'enregistrement dans les champs "
-"``subject`` et ``interestedParty`` des déclarations de relation apparaissent"
-" au moins dans une autre déclaration du tableau JSON de la norme BODS. "
-"L'outil d'étude des données peuvent ingérer des données sérialisées au "
-"format JSON et sous la forme d'un tableau."
+"``subject`` et ``interestedParty`` des énoncés de relation apparaissent au "
+"moins dans un autre énoncé du tableau JSON de la norme BODS. L'outil d'étude"
+" des données peuvent ingérer des données sérialisées au format JSON et sous "
+"la forme d'un tableau."
