--- a/docs/locale/fr/LC_MESSAGES/standard/system/generating-statements.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/system/generating-statements.po
@@ -5,7 +5,6 @@
 # 
 # Translators:
 # Cécile Guarin, 2024
-# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Rachel Vint, 2024\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +24,7 @@ msgstr ""
 #: ../../standard/system/generating-statements.rst:4
 #: b79b109ce85d4e4680967ab9fdd19abd
 msgid "Generating statements"
-msgstr "Génération de déclarations"
+msgstr "Génération d'énoncés"
 
 #: ../../standard/system/generating-statements.rst:6
 #: 47583a932f5e4bb09fcd0fbe8657b894
@@ -35,10 +34,10 @@ msgid ""
 "(``statementId``) and different property values. See :ref:`information-"
 "updates` for more information."
 msgstr ""
-"Les déclarations doivent être considérées comme immuables : une fois une "
-"déclaration publiée, elle ne doit pas être republiée avec le même "
-"identifiant (``statementId``) et des valeurs de propriété différentes. "
-"Consultez la section :ref:`information-updates` pour en savoir plus."
+"Les énoncés doivent être considérés comme immuables : une fois un énoncé "
+"publié, il ne doit pas être republié avec le même identifiant "
+"(``statementId``) et des valeurs de propriété différentes. Consultez la "
+"section :ref:`information-updates` pour en savoir plus."
 
 #: ../../standard/system/generating-statements.rst:8
 #: 658194ae9f2249a7a157a8b881e1c1f5
@@ -46,9 +45,8 @@ msgid ""
 "Each Statement MUST have a unique statement identifier. There MUST NOT be a "
 "possibility of collision between identifiers for different Statements."
 msgstr ""
-"Chaque déclaration doit avoir un identifiant unique. Il ne doit exister "
-"aucune possibilité de conflit entre les identifiants des différentes "
-"déclarations."
+"Chaque énoncé doit avoir un identifiant unique. Il ne doit exister aucune "
+"possibilité de conflit entre les identifiants des différents énoncés."
 
 #: ../../standard/system/generating-statements.rst:10
 #: 54f8a2d09e5f4a68b37351e59547b6f9
@@ -59,8 +57,7 @@ msgstr "Cela signifie que :"
 #: dafbc5730b314cc3a61864e677715056
 msgid "two **different** Statements SHOULD never have the same identifier"
 msgstr ""
-"deux déclarations **différentes** ne doivent jamais avoir le même "
-"identifiant ;"
+"deux énoncés **différents** ne doivent jamais avoir le même identifiant ;"
 
 #: ../../standard/system/generating-statements.rst:13
 #: 372d2fdc2e074622bd5a803325fd2cc9
@@ -68,7 +65,7 @@ msgid ""
 "once an identifier is assigned to a Statement, the identifier SHOULD NOT "
 "change."
 msgstr ""
-"une fois un identifiant attribué à une déclaration, il ne doit jamais être "
+"une fois un identifiant attribué à un énoncé, il ne doit jamais être "
 "modifié."
 
 #: ../../standard/system/generating-statements.rst:15
@@ -77,8 +74,8 @@ msgid ""
 "The schema enforces a minimum statement identifier length of 32 characters, "
 "and maximum length of 64 characters."
 msgstr ""
-"Le schéma applique aux déclarations un identifiant de 32 caractères au "
-"minimum et de 64 caractères au maximum."
+"Le schéma applique aux énoncés un identifiant de 32 caractères au minimum et"
+" de 64 caractères au maximum."
 
 #: ../../standard/system/generating-statements.rst:17
 #: 048fd7c37f7d46fea60fa4a12ee277fa
@@ -88,7 +85,7 @@ msgid ""
 "contrast to :ref:`entity or person identifiers <guidance-identifiers>`, "
 "which are useful to display to users."
 msgstr ""
-"En règle générale, les identifiants des déclarations sont destinés à être "
+"En règle générale, les identifiants des énoncés sont destinés à être "
 "utilisés dans les applications. Dans la plupart des cas, ils n'ont pas "
 "besoin d'être visibles pour les utilisateurs et les utilisatrices, "
 "contrairement aux :ref:`identifiants d'entité ou de personne <guidance-"
@@ -97,7 +94,7 @@ msgstr ""
 #: ../../standard/system/generating-statements.rst:20
 #: 88445e549b714e8b86fa2cd8678814ad
 msgid "Strategies for statement identifier creation"
-msgstr "Stratégies de création des identifiants de déclaration"
+msgstr "Stratégies de création des identifiants d'énoncé"
 
 #: ../../standard/system/generating-statements.rst:22
 #: ca9dc2a04b5c4905ba1adb861573fd2c
@@ -106,7 +103,7 @@ msgid ""
 "identifiers."
 msgstr ""
 "Les éditeurs peuvent recourir à l'une des stratégies suivantes pour créer "
-"des identifiants de déclaration."
+"des identifiants d'énoncé."
 
 #: ../../standard/system/generating-statements.rst:24
 #: b3490008113745ffbc7a47effd16bc6a
@@ -117,10 +114,10 @@ msgid ""
 "Update it whenever the relevant record is updated."
 msgstr ""
 "Générez un `identifiant universel unique "
-"<https://fr.wikipedia.org/wiki/Universally_unique_identifier>`_ pour la "
-"première déclaration concernant un enregistrement. Stockez-le dans le "
-"système de gestion des données. Actualisez-le à chaque fois que "
-"l'enregistrement concerné est mis à jour."
+"<https://fr.wikipedia.org/wiki/Universally_unique_identifier>`_ pour le "
+"premier énoncé concernant un enregistrement. Stockez-le dans le système de "
+"gestion des données. Actualisez-le à chaque fois que l'enregistrement "
+"concerné est mis à jour."
 
 #: ../../standard/system/generating-statements.rst:25
 #: b96806d6e653438eabea99845e9a0afa
@@ -143,9 +140,8 @@ msgid ""
 "``statementId`` field) with a low collision probability."
 msgstr ""
 "Utilisez une fonction de hachage conçue de manière appropriée qui génère des"
-" identifiants à partir d'une représentation JSON normalisée de la "
-"déclaration (excepté le champ ``statementId``) avec une faible probabilité "
-"de conflit."
+" identifiants à partir d'une représentation JSON normalisée de l'énoncé "
+"(excepté le champ ``statementId``) avec une faible probabilité de conflit."
 
 #: ../../standard/system/generating-statements.rst:27
 #: 5296651244334e03b65000ea111baa81
